# Sectio

./: .gitignore  MANIFEST.in  README.md  TODO.md  audit_results.csv  pyproject.toml
sectio/: __init__.py  catalog.py  core.py  geometry.py  registry.py  utils.py
sectio/exporters/: svg_exporter.py
sectio/providers/: sqlite_provider.py  svg_provider.py
sectio/resources/: steel_profiles.db
tests/: compute.ipynb  export_specific.ipynb  inertia.ipynb  inspector.ipynb  test_core_properties.py  test_discovery.py  test_global_audit.py  test_provider_logic.py  test_single.py  test_svg_export.py  test_svg_export_hollows.py  test_validation.py  testing_digest.py
