[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build-meta"

[project]
name = "sectio"
version = "0.1.0"
description = "Cross-section geometry engine for FEA, built on Shapely."
dependencies = [
    "shapely>=2.0.0",
    "numpy",
    "pandas",
]

[project.optional-dependencies]
dev = ["pytest", "matplotlib"]